--- a/package.json
+++ b/package.json
@@ -5,14 +5,19 @@
   "main": "servidor.js",
   "scripts": {
     "start": "node server.js",
+    "ServerES6toJS5": "node_modules/.bin/babel ./server.es6.js -o ./serverBabel.js -w",
+    "ServerTStoJS5": "node_modules/.bin/tsc ./server.ts -w",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
     "dayjs": "^1.10.6",
     "express": "^4.17.1",
     "express-handlebars": "^5.3.2",
-    "socket.io": "^4.1.3"
+    "socket.io": "^4.1.3",
+    "typescript": "^4.3.5"
   }
 }
